correcao de insercao com barra no final

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 </div>
                 
                 <div id="pai">
-
+                   <form>
+                       <input type="text"><button type="button">adicionar</button>
+                   </form>
                 </div>
 
         </div>
