inclusao de botao de exclusão

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
                 <h1 id="title"></h1>
 
                 <div id="filhos">
-
                 </div>
                 
                 <div id="pai">
                    <form>
-                       <input type="hidden" id="id_pai">
-                       <input type="text" id="valor_lista" ><button type="button" id="adicionar">adicionar</button>
+                       <input type="hidden" id="id_pai" required>
+                       <input type="text" id="valor_lista" ><button type="button" id="adicionar">Adicionar</button>
                    </form>
 
                     <div id="lista"></div>
