- melhorias no css ; - exclusao ; - alteracao ;

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
     <head>
        <title>mydontlist</title>
+       <meta charset="UTF-8">
+       <meta name="description" content="mydontlist">
        <link rel="stylesheet" type="text/css" href="http://localhost/mydontlist/frontend/css/home.css">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <script type="text/javascript" src="http://localhost/mydontlist/frontend/js/jquery-3.3.1.min.js"></script>
